fix: h-feed spacing with owl; add: cached pages list to offline page

--- a/src/scss/base/_miscellaneous.scss
+++ b/src/scss/base/_miscellaneous.scss
@@ -207,6 +207,10 @@ textarea {
     }
 }
 
+.h-feed {
+    @include owl;
+}
+
 .requires-js {
     .no-js & {
         display: none;
